syntax = "proto3";

package raftpb;

message RequestVoteArgs {
    uint64 term = 1;
	uint64 candidate_id = 2;
	uint64 last_log_index = 3;
	uint64 last_log_term = 4;
}

message RequestVoteReply {
    uint64 term = 1;
    bool vote_granted = 2;
}

message AppendEntryArgs {
	uint64 term = 1;
	uint64 leader_id = 2;
	uint64 prev_log_index = 3;
	uint64 prev_log_term = 4;
	bytes entries= 5;
	uint64 leader_commit = 6;
}

message AppendEntryReply {
	uint64 term = 1;
	bool success = 2;
}